syntax = "proto3";

package role_permission;

message GetAllPermissionByRoleIdRequest {
    string roleId = 1;
}

message GetAllPermissionByRoleIdResponse {
    int32 status = 1;
    string message = 2;
    repeated string permission = 3;
}

service RolePermissionService {
    rpc GetAllPermissionByRoleId (GetAllPermissionByRoleIdRequest) returns (GetAllPermissionByRoleIdResponse);
}